--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 googletrans==4.0.0rc1
-aiohttp==3.7.4.post0
+aiohttp>=3.7.4
 pytio==0.3.1
 git+https://github.com/Rapptz/discord-ext-menus
 toml==0.10.2
