--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Cache Token
         env:
           TOKEN: ${{ secrets.TOKEN }}
+          OWNER_ID: ${{ secrets.OWNER_ID }}
         run: |
