--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 youtube_dl==2021.6.6
-aiohttp>=3.7.4
+aiohttp==3.7.4
 httpx==0.13.3
 youtube_search_python==1.4.6
 pytio==0.3.1
@@ -7,4 +7,4 @@ googletrans==4.0.0rc1
 git+https://github.com/Rapptz/discord-ext-menus
 discord==1.7.3
 PyNaCl==1.3.0
-Pillow>=8.3.2
+Pillow==8.3.2
